# klox

./: .gitignore  LICENSE  README.md  benchmark.sh  compareilat  do_ilat_run.sh  ilat_compare.20201120-093555.out  ilat_compare.20210714-014511.out
c/: .gitignore  .ignore  .vimrc  CMakeLists.txt  Makefile  cb_integration.cpp  cb_integration.h  chunk.cpp  chunk.h  common.h  compiler.cpp  compiler.h  cycle.h  debug.cpp  debug.h  main.cpp  memory.cpp  memory.h  object.cpp  object.h  scanner.cpp  scanner.h  structmap.cpp  structmap.h  structmap_amt.h  structmap_shl.h  table.cpp  table.h  trace.h  value.cpp  value.h  vm.cpp  vm.h
c/attic/: binary_trees_bug.txt  first_good_partial_gc_20190614.txt  stack.txt  todo_amt  upvalues.txt
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
test/benchmark/: binary_trees_1GB_limit.lox  binary_trees_2GB_limit.lox  instantiation_1GB_limit.lox  instantiation_2GB_limit.lox
test/dantests/: ch25_ex1.lox  ch25_ex10.lox  ch25_ex2.lox  ch25_ex3.lox  ch25_ex4.lox  ch25_ex5.lox  ch25_ex6.lox  ch25_ex7.lox  ch25_ex8.lox  ch25_ex9.lox  testclass.lox  testfunc.lox  testgc.lox  testinterning.lox
util/: test.py  test_clox.py  test_testbed_clox.py  test_testbed_klox.py
